--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Rock, Paper, Scissors</title><link rel="stylesheet" href="/index.3daef7aa.css"><script defer type="module" src="/index.e32447de.js"></script></head><body> <section class="root" role="main"></section> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="/index.af814d91.css">
+    <script defer="" src="/index.bdea7d65.js"></script>
+  </head>
+  <body>
+    <section class="root" role="main"></section>
+  </body>
+</html>
