--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Rock, Paper, Scissors</title>
-    <link rel="stylesheet" href="/index.af814d91.css">
-    <script defer="" src="/index.bdea7d65.js"></script>
+    <link rel="stylesheet" href="/FM-rock-paper-scissors/index.af814d91.css" />
+    <script defer="" src="/FM-rock-paper-scissors/index.bdea7d65.js"></script>
   </head>
   <body>
     <section class="root" role="main"></section>
