--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock, Paper, Scissors</title>
-    <link rel="stylesheet" href="/FM-rock-paper-scissors/index.3daef7aa.css" />
-    <script defer type="module" src="/FM-rock-paper-scissors/index.f1874395.js"></script>
-  </head>
-  <body>
-    <section class="root" role="main"></section>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Rock, Paper, Scissors</title><link rel="stylesheet" href="/index.3daef7aa.css"><script defer type="module" src="/index.d9353bbc.js"></script></head><body> <section class="root" role="main"></section> </body></html>
