--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.jpeg" />
+
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="./style.css" />
     <script defer type="module" src="./index.ts"></script>
