--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon shortcut" type="image/png" href="/favicon.0fea6170.jpeg" />
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="/FM-rock-paper-scissors/index.3daef7aa.css" />
     <script defer type="module" src="/FM-rock-paper-scissors/index.af6756db.js"></script>
